--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     <h3>Pokedex</h3>
                     <p>Pokedex project, using API requests, GIFs and a search bar function. I did this project in order to learn how to use APIs, and how to work with different image and GIFs sizes.</p>
                     <div class="project-buttons">
-                        <div class="demo-button"><a href="https://batistatiago40.github.io/geradorSenhas/" target="_blank">DEMO</a></div>
-                        <div class="code-button"><a href="https://github.com/batistaTiago40/geradorSenhas" target="_blank"><i class="fa-brands fa-github"></i> CODE</a></div>
+                        <div class="demo-button"><a href="https://batistatiago40.github.io/Pokedex/" target="_blank">DEMO</a></div>
+                        <div class="code-button"><a href="https://github.com/batistaTiago40/Pokedex" target="_blank"><i class="fa-brands fa-github"></i> CODE</a></div>
                     </div>
                 </div>
             </div>
